# hse_cb_tg

./: Clustering.ipynb  Dockerfile  Preparing_embeddings.ipynb  README.md  bert_encoding.py  bs4_parser.py  centroids.npy  k_means_inference.py  main.py  pyproject.toml  tg_channels_clusters_2023_24_10.xlsx  tg_parser.py
